[workspace]
members = [
  "crates/chakracore-sys",
  "crates/chakracore",
  "crates/examples",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.92.0"
license = "MIT"
authors = ["Namhyeon Go <gnh1201@catswords.re.kr>"]
repository = "https://github.com/gnh1201/catswords-jsrt-rs"
keywords = [
  "chakracore",
  "javascript",
  "runtime",
  "industrial",
  "embedded"
]
categories = ["api-bindings"]

[workspace.dependencies]
cc = "1"
thiserror = "1"
once_cell = "1"

[profile.dev]
opt-level = 0
debug = 2
lto = "off"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
