[package]
name = "catswords-jsrt-sys"
version = "0.3.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT"
authors = ["Namhyeon Go <gnh1201@catswords.re.kr>"]

description = "Raw FFI bindings for ChakraCore (JsRT). Unsafe layer only."
keywords = [
  "chakracore",
  "jsrt",
  "javascript",
  "ffi",
  "bindings",
  "industrial",
  "embedded"
]
categories = ["external-ffi-bindings"]

links = "ChakraCore"
build = "build.rs"
publish = true

[lib]
name = "catswords_jsrt_sys"
path = "src/lib.rs"

[features]
default = []

[build-dependencies]
cc = { workspace = true }

[dependencies]
