[package]
name = "chakracore"
version = "0.3.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT"
authors = ["Namhyeon Go <gnh1201@catswords.re.kr>"]

description = "Safe-ish ergonomic Rust wrapper for ChakraCore JsRT"
keywords = [
  "chakracore",
  "javascript",
  "runtime",
  "industrial",
  "embedded"
]
categories = ["api-bindings"]
publish = false

[lib]
name = "chakracore"
path = "src/lib.rs"

[features]
default = []

[dependencies]
chakracore-sys = { path = "../chakracore-sys", version = "0.3.0" }
thiserror = "2"

[dev-dependencies]
